--- a/WritingNotes/templates/WritingNotes/layout.html
+++ b/WritingNotes/templates/WritingNotes/layout.html
@@ -52,5 +52,13 @@
         
 {% block body%}
 {%endblock%}
+    <div class="container">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-5 d-flex align-items-center">
+      <span class="text-muted">A juan yael vasquez production</span>
+    </div>
+
+  </footer>
+</div>
 </body>
 </html>
